--- a/src/scss/blocks/_catalogs.scss
+++ b/src/scss/blocks/_catalogs.scss
@@ -150,7 +150,11 @@
         span {
           color: #404040;
           padding-top: 3px;
-          display: block;
+          display: flex;
+          align-items: center;
+        }
+        .catalog-date {
+          padding-right: 6px;
         }
       }
     }
